<resources>
    <string name="app_name">Conduit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_signIn">Sign In</string>
    <string name="menu_signUp">Sign Up</string>
    <string name="menu_user">User</string>
    <string name="new_article">New Article</string>
    <string name="settings">Settings</string>
</resources>