<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_signIn"
            android:title="@string/menu_signIn" />
        <item
            android:id="@+id/nav_signUp"
            android:title="@string/menu_signUp" />
    </group>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_new_article"
                android:icon="@drawable/ic_baseline_edit_24"
                android:title="@string/new_article" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />
        </menu>

    </item>
</menu>